# a-softer-world-downloader

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
a_softer_world/: cli.py  client.py  constants.py  json_serializer.py  util.py
data/: alt.txt  comics.csv  comics.json  comics.jsonl  urls.txt
scripts/: convert-jsonl-to-csv.sh
